# agent-scratchpad

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agentscratchpad/: __init__.py  scratchpad.py  similarity.py
tests/: test_scratchpad.py
